<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
		android:title="@string/profile">
		<ListPreference
			android:key="profile"
			android:title="@string/profile"/>
		<Preference
			android:key="prof_add_btn"
			android:title="@string/prof_add"/>
		<Preference
			android:key="prof_del_btn"
			android:title="@string/prof_del"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/advanced">

		<CheckBoxPreference
			android:key="adv_per_app"
			android:title="@string/adv_per_app"/>

		<CheckBoxPreference
			android:key="adv_app_bypass"
			android:title="@string/adv_app_bypass"
			android:summary="@string/adv_app_bypass_sum"
			android:dependency="adv_per_app"/>

		<Preference
			android:key="adv_app_selector"
			android:title="@string/adv_app_selector"
			android:summary="@string/adv_app_selector_sum"
			android:dependency="adv_per_app"/>

		<EditTextPreference
			android:key="adv_app_list"
			android:title="@string/adv_app_list"
			android:summary="@string/adv_app_list_sum"
			android:dependency="adv_per_app"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/appearance">
		<ListPreference
			android:key="theme_mode"
			android:title="@string/theme_mode"
			android:entries="@array/theme_modes"
			android:entryValues="@array/theme_mode_values"
			android:defaultValue="system"
			android:summary="%s"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/proxy_settings">
		<CheckBoxPreference
			android:key="auto_stop"
			android:title="@string/auto_stop"
			android:summary="@string/auto_stop_sum"
			android:defaultValue="false"/>
	</PreferenceCategory>

</PreferenceScreen>
